--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Indecision App by Dmitrijs Paklons</title>
+    <link rel="icon" type="image/png" href="./images/favicon.png">
   </head>
   <body>
       <div id="app"></div>
